--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
-<div *ngFor="let quest of dailyQuests">
+<div *ngFor="let quest of dailyQuests; let index = index">
   <h3>{{quest.name}}</h3>
-  <ul>
-    <li *ngFor="let step of quest.steps">{{step}}</li>
-  </ul>
+  <p>{{quest.description}}</p>
+  <button (click)="validateQuest(index)">Validate</button>
+  <button (click)="cancelQuest(index)">Cancel</button>
 </div>
