--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,11 @@
+<ul>
+    <li>
+        <a href="/">Home</a>
+    </li>
+
+    <li>
+        <a href="/profile">Profile</a>
+    </li>
+</ul>
+
 <router-outlet></router-outlet>
