Displaying player info on Profile page

--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,3 +1,11 @@
 <p>
-  profile page
+  Lv. {{ currentLevelData.currentLvl }}
+</p>
+
+<p>
+  {{ currentLevelData.currentXP }} / {{ currentLevelData.xpNeeded }} XP
+</p>
+
+<p>
+  {{ currentLevelData.percentage }}% towards Lv. {{ currentLevelData.currentLvl + 1 }}
 </p>
