--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <ul>
     <li>
-        <a href="/">Home</a>
+        <a routerLink="/home">Home</a>
     </li>
 
     <li>
-        <a href="/profile">Profile</a>
+        <a routerLink="/profile">Profile</a>
     </li>
 </ul>
 
