Design of home page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,10 @@
-<ul>
-    <li>
-        <a routerLink="/home">Home</a>
-    </li>
+<div id="navbar">
+    <div id="greeting">Welcome!</div>
 
-    <li>
-        <a routerLink="/profile">Profile</a>
-    </li>
-</ul>
+    <div id="nav-btns">
+        <a routerLink="/home" routerLinkActive="active">Home</a>
+        <a routerLink="/profile" routerLinkActive="active">Profile</a>
+    </div>
+</div>
 
 <router-outlet></router-outlet>
