--- a/src/app/components/profile/profile.component.css
+++ b/src/app/components/profile/profile.component.css
@@ -25,17 +25,25 @@
     height: 20px;
 
     border: 1px solid black;
-    border-radius: 32px;
+    border-radius: 5px;
+
+    box-shadow: 5px 5px 10px darkgray;
 
     overflow: hidden;
 }
 
 #xp-bar div {
-    height: 100%;
-    background-color: lightgreen;
-    border-radius: 32px;
+    position: absolute;
+    height: 100px;
+    top: -40px;
+    left: -5px;
+
+    background-color: #333333;
+
+    transform: rotate(15deg);
 }
 
 #xp-numbers {
+    color: #706c61;
     text-align: end;
 }
