Loading font from the web

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~normalize.css';
 
-@font-face {
-    font-family: 'Multi';
-    src:  url('./assets/fonts/Muli/Muli-VariableFont:wght.ttf') format('ttf'), 
-          url('./assets/fonts/Muli/Muli-Italic-VariableFont:wght.ttf') format('ttf');
-}
+@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
 
 body {
     font-family: 'Muli', sans-serif;
