--- a/src/app/components/profile/profile.component.css
+++ b/src/app/components/profile/profile.component.css
@@ -4,17 +4,26 @@
     overflow-x: auto;
 
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
-#xp-infos > * {
+#xp-infos > *, .stats-infos > * {
     margin: 5px;
 }
 
-#level {
+.level {
     font-size: 24px;
+    font-weight: bold;
+}
+
+.stats-level {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    font-size: 18px;
     font-weight: bold;
 }
 
@@ -43,7 +52,45 @@
     transform: rotate(15deg);
 }
 
-#xp-numbers {
+.stats-bar {
+    position: relative;
+
+    width: 250px;
+    height: 25px;
+
+    border: 1px solid black;
+    border-radius: 4px;
+
+    box-shadow: 5px 5px 10px darkgray;
+
+    overflow: hidden;
+}
+
+.stats-bar div {
+    position: absolute;
+    height: 100px;
+    top: -40px;
+    left: -5px;
+
+    background-color: #333333;
+
+    transform: rotate(15deg);
+}
+
+#xp-numbers, .stats-numbers {
     color: #706c61;
     text-align: end;
+}
+
+.stats-numbers {
+    font-size: 90%;
+}
+
+#stats-wrapper {
+    width: 300px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    align-items: flex-end;
 }
