--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -25,7 +25,7 @@
         </div>
       </div>
       
-      <div class="stats-bar">
+      <div class="stats-bar strength-stats">
         <div [style.width.%]="currentStatsData.strength.statsPercentage"></div>
       </div>
       <div class="stats-numbers">
@@ -44,7 +44,7 @@
         </div>
       </div>
       
-      <div class="stats-bar">
+      <div class="stats-bar intelligence-stats">
         <div [style.width.%]="currentStatsData.intelligence.statsPercentage"></div>
       </div>
       <div class="stats-numbers">
@@ -63,7 +63,7 @@
         </div>
       </div>
       
-      <div class="stats-bar">
+      <div class="stats-bar wisdom-stats">
         <div [style.width.%]="currentStatsData.wisdom.statsPercentage"></div>
       </div>
       <div class="stats-numbers">
