--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
 
     <div id="nav-btns">
         <a routerLink="/home" routerLinkActive="active">Home</a>
+        <a routerLink="/todolist" routerLinkActive="active">Todo</a>
         <a routerLink="/profile" routerLinkActive="active">Profile</a>
     </div>
 </div>
