Finished Todolist base features - pt2

--- a/src/app/components/todo-list/todo-list.component.html
+++ b/src/app/components/todo-list/todo-list.component.html
@@ -1,6 +1,8 @@
 <div id="todolist-wrapper">
     <p *ngFor="let task of list">
-        {{task.value}}
+        <button (click)="deleteTask(task.id)">Delete</button>
+        <input [checked]="task.done" type="checkbox" name="Done" (change)="checkboxClicked($event, task.id)">
+        <span [class.task-done]="task.done">{{task.value}}</span>
     </p>
 
     <form id="new-task" (submit)="addNewTask()">
