--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -72,6 +72,18 @@
     </div>
 
   </div>
+
+
+
+  <div id="achievements-wrapper">
+    <h1>Achievements</h1>
+    <h3>Quests cleared : {{currentAchievements.questCleared}}</h3>
+    <h4>Strength quests cleared : {{currentAchievements.strengthQuest}}</h4>
+    <h4>Intelligence quests cleared : {{currentAchievements.intelligenceQuest}}</h4>
+    <h4>Wisdom quests cleared : {{currentAchievements.wisdomQuest}}</h4>
+
+    <h3>Quests failed : {{currentAchievements.questFailed}}</h3>
+  </div>
 </div>
 
 <button id="reset-btn" (click)="resetPlayerStats()"><div id="reset-icon"></div></button>
