Todolist design - pt3

--- a/src/app/components/todo-list/todo-list.component.html
+++ b/src/app/components/todo-list/todo-list.component.html
@@ -1,17 +1,17 @@
 <form id="new-task" (submit)="addNewTask()">
-    <input #newTask placeholder="Task" type="text" name="" id="task-input">
-    <button type="submit">Add</button>
+    <input #newTask placeholder="Task" type="text" name="" id="task-input" autocomplete="off">
+    <button id="new-task-btn" type="submit">Add</button>
 </form>
 
 <div id="todolist-wrapper">
     <div id="todolist-items">
         <p class="todolist-task" *ngFor="let task of list">
-            <button class="todolist-delete-btn" (click)="deleteTask(task.id)"></button>
-
             <label class="todolist-task-checkbox">
                 <input type="checkbox" [checked]="task.done" name="Done" (change)="checkboxClicked($event, task.id)">
                 <span class="checkmark"></span>
             </label>
+
+            <button class="todolist-delete-btn" (click)="deleteTask(task.id)"></button>
 
             <span [class.task-done]="task.done">{{task.value}}</span>
         </p>
