--- a/src/app/components/todo-list/todo-list.component.css
+++ b/src/app/components/todo-list/todo-list.component.css
@@ -76,21 +76,33 @@
     min-width: 28px;
     min-height: 28px;
 
-    margin: 0px 3px;
+    margin: 0;
 
     background: url('../../../assets/img/icons/delete.svg');
     background-size: 28px;
 
     outline: none;
+    cursor: pointer;
 }
 
+#new-task-btn {
+    background-color: #373737;
+    color: white;
+    padding: 10px 20px;
+    margin: 0px 2px;
+    border: none;
+    border-radius: 4px;
+    outline: none;
+    cursor: pointer;
+}
 
 /* Checkbox */
 
 .todolist-task-checkbox {
 	font-family: Verdana;
   	display: block;
-  	position: relative;
+    position: relative;
+    margin-left: 5px;
   	padding-left: 35px;
   	margin-bottom: 30px;
   	cursor: pointer;
