--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,89 +1,113 @@
 <div id="profile-wrapper">
-  <div id="xp-infos">
-    <div class="level">
-      Lv. {{ currentLevelData.currentLvl }}
+  
+  <div id="player-stats-wrapper">
+
+    <h2>Player stats</h2>
+
+
+    <div id="xp-infos">
+      <div class="level">
+        Lv. {{ currentLevelData.currentLvl }}
+      </div>
+      
+      <div id="xp-bar">
+        <div [style.width.%]="currentLevelData.percentage"></div>
+      </div>
+      <div id="xp-numbers">
+        {{ currentLevelData.currentXP }} / {{ currentLevelData.xpNeeded }} XP
+      </div>
     </div>
-    
-    <div id="xp-bar">
-      <div [style.width.%]="currentLevelData.percentage"></div>
-    </div>
-    <div id="xp-numbers">
-      {{ currentLevelData.currentXP }} / {{ currentLevelData.xpNeeded }} XP
+  
+    <div id="stats-wrapper">
+      <!-- Strength -->
+      <div class="stats-infos">
+        <div class="stats-level">
+          <div>
+            Strength
+          </div>
+          <div>
+            Lv. {{ currentStatsData.strength.currentStatsLevel }}
+          </div>
+        </div>
+        
+        <div class="stats-bar strength-stats">
+          <div [style.width.%]="currentStatsData.strength.statsPercentage"></div>
+        </div>
+        <div class="stats-numbers">
+          {{ currentStatsData.strength.currentStatsXp }} / {{ currentStatsData.strength.statsNeeded }} XP
+        </div>
+      </div>
+  
+      <!-- Intelligence -->
+      <div class="stats-infos">
+        <div class="stats-level">
+          <div>
+            Intelligence
+          </div>
+          <div>
+            Lv. {{ currentStatsData.intelligence.currentStatsLevel }}
+          </div>
+        </div>
+        
+        <div class="stats-bar intelligence-stats">
+          <div [style.width.%]="currentStatsData.intelligence.statsPercentage"></div>
+        </div>
+        <div class="stats-numbers">
+          {{ currentStatsData.intelligence.currentStatsXp }} / {{ currentStatsData.intelligence.statsNeeded }} XP
+        </div>
+      </div>
+  
+      <!-- Wisdom -->
+      <div class="stats-infos">
+        <div class="stats-level">
+          <div>
+            Wisdom
+          </div>
+          <div>
+            Lv. {{ currentStatsData.wisdom.currentStatsLevel }}
+          </div>
+        </div>
+        
+        <div class="stats-bar wisdom-stats">
+          <div [style.width.%]="currentStatsData.wisdom.statsPercentage"></div>
+        </div>
+        <div class="stats-numbers">
+          {{ currentStatsData.wisdom.currentStatsXp }} / {{ currentStatsData.wisdom.statsNeeded }} XP
+        </div>
+      </div>
     </div>
   </div>
 
-  <div id="stats-wrapper">
 
-    <!-- Strength -->
-    <div class="stats-infos">
-      <div class="stats-level">
-        <div>
-          Strength
-        </div>
-        <div>
-          Lv. {{ currentStatsData.strength.currentStatsLevel }}
-        </div>
-      </div>
-      
-      <div class="stats-bar strength-stats">
-        <div [style.width.%]="currentStatsData.strength.statsPercentage"></div>
-      </div>
-      <div class="stats-numbers">
-        {{ currentStatsData.strength.currentStatsXp }} / {{ currentStatsData.strength.statsNeeded }} XP
-      </div>
+
+  <div id="pie-chart-wrapper">
+    <div class="quest-pie-chart">
+      <h2>General quest stats</h2>
+      <canvas baseChart 
+        [data]="generalChartData" 
+        [labels]="generalChartLabels" 
+        [chartType]="pieChartType"
+        [options]="pieChartOptions"
+        [plugins]="pieChartPlugins"
+        [legend]="pieChartLegend"
+        [colors]="generalChartColors">
+      </canvas>
     </div>
 
-    <!-- Intelligence -->
-    <div class="stats-infos">
-      <div class="stats-level">
-        <div>
-          Intelligence
-        </div>
-        <div>
-          Lv. {{ currentStatsData.intelligence.currentStatsLevel }}
-        </div>
-      </div>
-      
-      <div class="stats-bar intelligence-stats">
-        <div [style.width.%]="currentStatsData.intelligence.statsPercentage"></div>
-      </div>
-      <div class="stats-numbers">
-        {{ currentStatsData.intelligence.currentStatsXp }} / {{ currentStatsData.intelligence.statsNeeded }} XP
-      </div>
+    <div class="quest-pie-chart">
+      <h2>Detailed quest stats</h2>
+      <canvas baseChart 
+        [data]="detailedChartData" 
+        [labels]="detailedChartLabels" 
+        [chartType]="pieChartType"
+        [options]="pieChartOptions"
+        [plugins]="pieChartPlugins"
+        [legend]="pieChartLegend"
+        [colors]="detailedChartColors">
+      </canvas>
     </div>
-
-    <!-- Wisdom -->
-    <div class="stats-infos">
-      <div class="stats-level">
-        <div>
-          Wisdom
-        </div>
-        <div>
-          Lv. {{ currentStatsData.wisdom.currentStatsLevel }}
-        </div>
-      </div>
-      
-      <div class="stats-bar wisdom-stats">
-        <div [style.width.%]="currentStatsData.wisdom.statsPercentage"></div>
-      </div>
-      <div class="stats-numbers">
-        {{ currentStatsData.wisdom.currentStatsXp }} / {{ currentStatsData.wisdom.statsNeeded }} XP
-      </div>
-    </div>
-
   </div>
 
-
-
-  <div id="achievements-wrapper">
-    <h1>Achievements</h1>
-    <h3>Quests cleared : {{currentAchievements.questCleared}}</h3>
-    <h4>Strength quests cleared : {{currentAchievements.strengthQuest}}</h4>
-    <h4>Intelligence quests cleared : {{currentAchievements.intelligenceQuest}}</h4>
-    <h4>Wisdom quests cleared : {{currentAchievements.wisdomQuest}}</h4>
-
-    <h3>Quests failed : {{currentAchievements.questFailed}}</h3>
-  </div>
 </div>
 
 <button id="reset-btn" (click)="resetPlayerStats()"><div id="reset-icon"></div></button>
